--- a/package.json
+++ b/package.json
@@ -9,10 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.2",
-    "expo-status-bar": "~1.12.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.7",
+    "expo": "~51.0.1",
+    "expo-checkbox": "3.0.0",
+    "expo-clipboard": "6.0.3",
+    "expo-linear-gradient": "13.0.2",
+    "expo-local-authentication": "14.0.1",
+    "expo-location": "17.0.1",
+    "expo-print": "13.0.1",
+    "expo-sharing": "12.0.1",
+    "expo-status-bar": "1.12.1",
+    "nativewind": "^2.0.11",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.3.3",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "2.16.1",
+    "react-native-reanimated": "3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "reverse-geocode": "^1.3.3",
+    "tailwindcss": "^3.3.2",
+    "expo-blur": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
