--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^20.0.0",
+    "@react-native-firebase/messaging": "^20.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
     "expo": "~51.0.1",
+    "expo-blur": "~13.0.2",
     "expo-checkbox": "3.0.0",
     "expo-clipboard": "6.0.3",
     "expo-linear-gradient": "13.0.2",
@@ -28,12 +31,12 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "2.16.1",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "reverse-geocode": "^1.3.3",
-    "tailwindcss": "^3.3.2",
-    "expo-blur": "~13.0.2"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
