--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.12.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^20.0.0",
     "@react-native-firebase/messaging": "^20.0.0",
