--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "3.31.1",
     "reverse-geocode": "^1.3.3",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "expo-system-ui": "~3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
