--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@google/generative-ai": "^0.12.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-firebase/app": "^20.0.0",
-    "@react-native-firebase/messaging": "^20.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.7",
@@ -38,7 +36,10 @@
     "react-native-screens": "3.31.1",
     "reverse-geocode": "^1.3.3",
     "tailwindcss": "^3.3.2",
-    "expo-system-ui": "~3.0.5"
+    "expo-system-ui": "~3.0.5",
+    "expo-device": "~6.0.2",
+    "expo-notifications": "~0.28.9",
+    "expo-constants": "~16.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
